# MLP-MNIST-CUDA

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
images/ready/: 098.txt  0987.txt  1234.txt  2345.txt  23654723.txt  3456.txt  Screenshot2026-05-1.txt  kasfughaeirhf.txt  nuevotest.txt  screeshot.txt  test1.txt  testMnist.txt
scripts/: download_mnist.py  preprocess_image.py
src/: main.cpp  mlp_cuda.cu  mlp_cuda.hpp  mnist_loader.cpp  mnist_loader.hpp  utils.hpp
